<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark"
    android:orientation="vertical"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/movie_frame"
            android:layout_width="match_parent"
            android:layout_height="240dp">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/slider_pager"
                android:layout_width="match_parent"
                android:layout_height="220dp" />

            <TextView
                android:id="@+id/nazivFilma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="2dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/colorWhite"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                tools:text="Harry Potter" />
        </FrameLayout>


        <TextView
            android:id="@+id/nazivFilma2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            android:visibility="gone"
            tools:text="Harry Potter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/film_zanr1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textAlignment="viewStart"
                android:textColor="@color/colorLightGray"
                tools:text="Action" />

            <TextView
                android:id="@+id/film_zanr2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textColor="@color/colorLightGray"
                tools:text="Adventure" />

            <TextView
                android:id="@+id/film_zanr3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorLightGray"
                tools:text="Science Fiction" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/film_godina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textAlignment="viewStart"
                android:textColor="@color/colorLightGray"
                tools:text="2020" />

            <TextView
                android:id="@+id/film_trajanje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorLightGray"
                tools:text="199min" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/slikaFilma"
                android:layout_width="120dp"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:scaleType="fitXY"
                android:transitionName="sharedName"
                app:srcCompat="@android:color/transparent"
                tools:srcCompat="@tools:sample/avatars[0]"
                android:contentDescription="@string/slika_filma" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/tv_plot"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:ellipsize="end"
                    android:maxLines="7"
                    android:padding="2dp"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintBottom_toTopOf="@+id/gridLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/gridLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="vertical"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">


                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/glod_star"
                        android:contentDescription="@string/zvezdica" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/imdb_ocena"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|center"
                            android:textColor="@color/colorWhite"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            tools:text="7.5" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|center"
                            android:text="@string/_10"
                            android:textColor="@color/colorWhite"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/imdb_votes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/colorLightGray"
                        android:textSize="12sp"
                        tools:text="156.520" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


        <Button
            android:id="@+id/favorite_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addFilm"
            android:text="@string/add_to_watchlist"
            android:textColor="#0D47A1"
            android:visibility="gone" />

        <Button
            android:id="@+id/delete_favorite_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="removeFilm"
            android:text="@string/remove_from_watchlist"
            android:textColor="#0D47A1"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/top_cast_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="7"
                android:text="@string/top_cast"
                android:textColor="@color/colorWhite"
                android:textSize="26sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/tv_see_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:background="@drawable/touch_feedback2"
                android:text="@string/see_all"
                android:textAlignment="center"
                android:textColor="#0D47A1"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListaGlumaca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

        <LinearLayout
            android:id="@+id/direktor_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="6dp"
                android:text="@string/director"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ime_direktora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/colorLightGray" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="6dp"
                android:text="@string/writers"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ime_pisaca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/colorLightGray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/trailers_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">


            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="7"
                android:text="@string/trailers"
                android:textColor="@color/colorWhite"
                android:textSize="26sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/video_recycler"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="20dp" />

        </LinearLayout>


    </LinearLayout>


</ScrollView>