<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ime_glumaca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:textAlignment="viewStart"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            tools:text="Harry Potter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/slika_glumaca"
                android:layout_width="120dp"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                app:srcCompat="@android:color/transparent"
                tools:srcCompat="@drawable/glava_silueta"
                android:contentDescription="@string/slika_glumca" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/biografija_glumca"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:ellipsize="end"
                    android:maxLines="8"
                    android:padding="2dp"
                    android:textColor="@color/colorWhite"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/died_glumac"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorLightGray"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="Died: //.//.////" />

                <TextView
                    android:id="@+id/born_glumac"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorLightGray"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@+id/birthplace_glumac"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="Born: 17.04.1992" />

                <TextView
                    android:id="@+id/birthplace_glumac"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/colorLightGray"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@+id/died_glumac"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="in New York, USA" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="7"
                android:text="@string/movies"
                android:textColor="@color/colorWhite"
                android:textSize="26sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/tv_see_all_filmove_glumca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:background="@drawable/touch_feedback2"
                android:text="@string/see_all"
                android:textAlignment="center"
                android:textColor="#0D47A1"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/filmovi_glumca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />


    </LinearLayout>


</ScrollView>